@@ -555,7 +555,7 @@ without context specification. Called  from parser."
 
 
 (defmacro-public def-grace-function (start stop)
-  `(def-music-function (location music) (ly:music?)
+  `(def-music-function (parser location music) (ly:music?)
      (make-music 'GraceMusic
 		 'origin location
 		 'element (make-music 'SequentialMusic
@@ -566,7 +566,7 @@ without context specification. Called  from parser."
 (defmacro-public def-music-function (args signature . body)
   "Helper macro for `ly:make-music-function'.
 Syntax:
-  (def-music-function (location arg1 arg2 ...) (arg1-type? arg2-type? ...)
+  (def-music-function (parser location arg1 arg2 ...) (arg1-type? arg2-type? ...)
     ...function body...)
 "
   `(ly:make-music-function (list ,@signature)
